<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.FavoriteDishesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="32sp"
                android:textStyle="bold"
                android:id="@+id/favoriteDishesTitle"/>

            <ImageView
                android:id="@+id/favoriteImageDishes"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/directions"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/directionsValue"
                android:textSize="20sp"
                android:id="@+id/favoriteDirectionsDishes"
                android:layout_marginTop="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nutrition_facts"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nutrition_factsValue"
                android:textSize="20sp"
                android:id="@+id/favoriteNutritionFactsDishes"
                android:layout_marginTop="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredientsValue"
                android:textSize="20sp"
                android:id="@+id/favoriteIngredientsDishes"
                android:layout_marginTop="25dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>