<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.FavoriteTrainingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="32sp"
                android:textStyle="bold"
                android:id="@+id/favoriteTrainingTitle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="20sp"
                android:id="@+id/favoriteDescriptionTraining"
                android:layout_marginTop="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning"
                android:textSize="20sp"
                android:id="@+id/favoriteWarningTraining"
                android:layout_marginTop="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step"
                android:textSize="20sp"
                android:id="@+id/favoriteStepTraining"
                android:layout_marginTop="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/challenge"
                android:textSize="20sp"
                android:id="@+id/favoriteChallengeTraining"
                android:layout_marginTop="25dp"/>

            <ImageView
                android:id="@+id/favoriteImageTrainingOne"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="25dp"/>

            <ImageView
                android:id="@+id/favoriteImageTrainingTwo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="25dp"/>

            <ImageView
                android:id="@+id/favoriteImageTrainingThree"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="25dp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>