<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.TrainingFromScheduleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date"
                android:textSize="26sp"
                android:id="@+id/trainingDate"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="32sp"
                android:textStyle="bold"
                android:id="@+id/scheduleTitle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="20sp"
                android:id="@+id/descriptionSchedule"
                android:layout_marginTop="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning"
                android:textSize="20sp"
                android:id="@+id/warningSchedule"
                android:layout_marginTop="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step"
                android:textSize="20sp"
                android:id="@+id/stepSchedule"
                android:layout_marginTop="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/challenge"
                android:textSize="20sp"
                android:id="@+id/challengeSchedule"
                android:layout_marginTop="25dp"/>

            <ImageView
                android:id="@+id/imageScheduleOne"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="25dp"/>

            <ImageView
                android:id="@+id/imageScheduleTwo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="25dp"/>

            <ImageView
                android:id="@+id/imageScheduleThree"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="25dp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>